# kkMusic

./: .gitignore  CMakeLists.txt  README.md  kkMusic.pro  lrcwidget.cpp  lrcwidget.h  lrcwidget.ui  mainwindow.cpp  mainwindow.h  res.qrc  searchwidget.cpp  searchwidget.h
resources/sound/: 奇妙能力歌.lrc
src/: lrcwidget.cpp  lrcwidget.h  mainwindow.cpp  mainwindow.h  searchwidget.cpp  searchwidget.h
ui/: lrcwidget.ui  mainwindow.ui
